estilizado Menu big-card

--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,1 +1,24 @@
-<p>big-card works!</p>
+<div class="container_bigcard">
+  <div class="big-card-photo">
+    <img src="https://blog.iprocess.com.br/wp-content/uploads/2021/11/placeholder.png"
+    height="200px"
+    width="400px"
+    >
+
+  </div>
+
+  <div class="big-card-title">
+    <h1>Saiu a nova versão do angular</h1>
+
+  </div>
+
+  <div class="big-card-description">
+
+    <p>Texto aqui  </p>
+
+  </div>
+
+
+
+
+</div>
