--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -2,13 +2,16 @@
   <div class="big-card-photo">
     <img src="https://blog.iprocess.com.br/wp-content/uploads/2021/11/placeholder.png"
     height="200px"
-    width="400px"
     >
 
   </div>
 
+
+
+
+
   <div class="big-card-title">
-    <h1>Saiu a nova versão do angular</h1>
+    <h1><a>Saiu href="">Saiu a nova versão do angular</a></h1>
 
   </div>
 
