--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -3,6 +3,14 @@
   <div class="articles_main">
     <app-big-card></app-big-card>
   </div>
-  <div class="articles_otther"></div>
+  <div class="articles_otther">
+    <app-small-card></app-small-card>
+    <app-small-card></app-small-card>
+    <app-small-card></app-small-card>
+
+
+
+  </div>
+
 
 </div>
