--- a/src/app/components/big-card/big-card.component.css
+++ b/src/app/components/big-card/big-card.component.css
@@ -1,5 +1,5 @@
 .container_bigcard{
- 
+
   width: 400px;
   height: 500px;
   margin-left: 10px;
@@ -26,7 +26,7 @@
 
 }
 
-.big-card-photo{
+.big-card-photo >img{
   width: 100%;
   min-width: 400px;
 }
