--- a/src/app/components/small-card/small-card.component.html
+++ b/src/app/components/small-card/small-card.component.html
@@ -1,1 +1,28 @@
-<p>small-card works!</p>
+<div class="container_small_card">
+  <div class="container_small-card-content">
+    <div class="small-card-photo">
+      <img src="https://nosbastidores.com.br/wp-content/uploads/2021/08/Series-Marvel-Disney-Plus-1024x576-1.jpg"
+
+      >
+
+    </div>
+
+    <div class="small-card-title">
+      <h1><a href="">Saiu a nova versão do angular</a></h1>
+
+    </div>
+
+  </div>
+  <div class="container-small-card-separator">
+    <hr>
+  </div>
+
+
+
+
+
+
+</div>
+
+
+
