--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,7 @@
+<header>
+  <app-menu-bar></app-menu-bar>
+</header>
+
 <app-menu-title></app-menu-title>
 <div class="conatainer_articles">
   <div class="articles_main">
