--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -1,1 +1,17 @@
-<p>menu-bar works!</p>
+<div class="container_menu-bar">
+  <ul>
+    <li>
+      <a href="https://www.linkedin.com/in/cristhian-a-rodrigues/">Linkedin</a>
+    </li>
+    <li><span>•</span></li>
+    <li>
+      <a href="https://github.com/crisrodrigues95/">GitHub</a>
+    </li>
+    <li><span>•</span></li>
+    <li>
+      <a href="">Youtube</a>
+    </li>
+
+  </ul>
+
+</div>
