--- a/src/app/components/big-card/big-card.component.html
+++ b/src/app/components/big-card/big-card.component.html
@@ -1,19 +1,19 @@
 <div class="container_bigcard">
   <div class="big-card-photo">
-    <img src="https://blog.iprocess.com.br/wp-content/uploads/2021/11/placeholder.png"
+    <img src="{{ photoCover}}"
     height="200px"
     >
 
   </div>
 
   <div class="big-card-title">
-    <h1><a href="">Saiu a nova versão do angular</a></h1>
+    <h1><a href="">{{ cardTitle }}</a></h1>
 
   </div>
 
   <div class="big-card-description">
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras et fringilla magna. Nullam nisl tortor, hendrerit eget rhoncus ut, molestie ut dolor. Fusce tincidunt porta lectus, vel aliquet leo accumsan et. Cras id velit sit amet lectus gravida malesuada vitae vel felis. Curabitur convallis elit ut accumsan cursus. Pellentesque condimentum nisi eu lorem posuere, sed lacinia risus facilisis. Vestibulum vitae nisi ipsum </p>
+    <p>{{ cardDescription }} </p>
 
   </div>
 
