--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
   background-color: #111111;
   color: white;
-  font-family: 'Sogoe UI';
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 a{
